--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,128 @@
 /* TODO: Make it awesome */
+
+body {
+    background-color: #fff0d3;
+    text-align: center;
+}
+
+header {
+height: 200px;
+    background-color: #ffd380;
+    color: #8a508f;
+    font-size: 50px;
+    font-weight: 400;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h1 {
+    background-color: #ffd380;
+    text-shadow: 1px 1px 2px black;
+    /* padding: 20px; */
+    margin: 20px;
+}
+nav ul{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+}
+nav ul li {
+    justify-content: center;
+    display:inline-flex;
+    background-color: #ffd380;
+    padding-left: 20px;
+
+}
+
+.card header{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    height: 50px;
+    padding:30px;
+    justify-content: center;
+    /* box-shadow: 0 4px 2px 0 rgb(0 0 0 / 60%), 0 6px 20px 0 rgb(0 0 0 / 29%); */
+}
+.card header h1{
+    margin-bottom: 30px;
+}
+.copy ol li{
+    font-family: Arial;
+    margin-bottom: 20px;
+}
+
+
+
+ img{
+    display:inline-grid;
+    border-radius: 5px;
+/* border-style: solid; */
+border-width: 5px;
+    border-color: #ffd380;
+
+    margin: 10px;
+    height: 200px;
+    width: 200px;
+    box-shadow: 0 4px 2px 0 rgb(0 0 0 / 60%), 0 6px 20px 0 rgb(0 0 0 / 29%);
+ }
+
+ img:hover {
+    border-style: solid;
+border-width: 5px;
+border-color: #ffd380;
+
+ }
+
+label {
+    background-color: #8a508f;
+    border-spacing: 15px;
+    border-style: dotted;
+    border-width: 5px;
+    font-size: 18px;
+    color: aquamarine;
+    margin: 15px;
+    padding: 10px;
+    margin-top: 30px;
+}
+
+ol {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+table{
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 150px;
+    
+}
+
+tr {
+    height: 20px;
+    padding: 10px;
+}
+
+th{
+    padding: 10px
+}
+
+
+
+legend {
+    padding: 20px;
+
+    font-size: 30px;
+    font-weight: 400;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #8a508f;
+}
+
+footer {
+    margin-top: 40px;
+    background-color: #ffd380;
+    height: 50px;
+}
+
+p{
+    padding-top: 15px;
+}
