--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ nav ul li {
     height: 50px;
     padding:30px;
     justify-content: center;
-    /* box-shadow: 0 4px 2px 0 rgb(0 0 0 / 60%), 0 6px 20px 0 rgb(0 0 0 / 29%); */
+    box-shadow: 0 4px 2px 0 rgb(0 0 0 / 60%), 0 6px 20px 0 rgb(0 0 0 / 29%);
 }
 .card header h1{
     margin-bottom: 30px;
@@ -93,7 +93,8 @@ table{
     font-size: 20px;
     justify-content: center;
     align-items: center;
-    margin-left: 150px;
+    margin-left: auto;
+  margin-right: auto;
     
 }
 
