--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 /* TODO: Make it awesome */
+/* 
+* {
+    box-sizing: border-box;
+    
+  } */
 
 body {
     background-color: #fff0d3;
@@ -6,42 +11,57 @@ body {
 }
 
 header {
-height: 200px;
+    margin: auto;
+   height: fit-content;
     background-color: #ffd380;
     color: #8a508f;
     font-size: 50px;
-    font-weight: 400;
+
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 h1 {
     background-color: #ffd380;
-    text-shadow: 1px 1px 2px black;
-    /* padding: 20px; */
-    margin: 20px;
+    text-shadow: 2px 2px 2px rgb(45, 45, 45);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 60px;
+    font-weight:900;
+    margin: auto;
+    padding-top: 40px;
 }
 nav ul{
     display:flex;
     flex-direction: row;
     justify-content: center;
+    text-decoration: none;
 }
 nav ul li {
     justify-content: center;
     display:inline-flex;
     background-color: #ffd380;
     padding-left: 20px;
+    padding-top: 10px;
+    text-decoration: none;
+}
 
+a {
+    text-decoration: none;
 }
 
 .card header{
+    background-color: #c9aacb;
+    height: fit-content;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     height: 50px;
     padding:30px;
     justify-content: center;
     box-shadow: 0 4px 2px 0 rgb(0 0 0 / 60%), 0 6px 20px 0 rgb(0 0 0 / 29%);
+    margin: auto;
 }
 .card header h1{
-    margin-bottom: 30px;
+    background-color: #c9aacb;
+    margin: auto;
+    padding: 0;
 }
 .copy ol li{
     font-family: Arial;
@@ -72,14 +92,15 @@ border-color: #ffd380;
 
 label {
     background-color: #8a508f;
-    border-spacing: 15px;
-    border-style: dotted;
-    border-width: 5px;
-    font-size: 18px;
-    color: aquamarine;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 22px;
+    color: whitesmoke;
     margin: 15px;
-    padding: 10px;
+    padding: 20px;
     margin-top: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 2px 0 rgb(0 0 0 / 60%), 0 6px 20px 0 rgb(0 0 0 / 29%);
+
 }
 
 ol {
@@ -107,15 +128,68 @@ th{
     padding: 10px
 }
 
+#catalog {
+    margin-top: 40px;
 
+}
 
 legend {
-    padding: 20px;
-
-    font-size: 30px;
-    font-weight: 400;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+margin: 20px;
+margin-top: 40px;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+    font-weight: 700;
     color: #8a508f;
+    text-shadow: 1px 1px 2px rgb(45, 45, 45);
+
+}
+label {
+    margin: 10px;
+
+}
+
+input {
+    background-color:#8a508f;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 22px;
+    text-align: center;
+    color: whitesmoke;
+    margin: 15px;
+    padding: 20px;
+    margin-top: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 2px 0 rgb(0 0 0 / 60%), 0 6px 20px 0 rgb(0 0 0 / 29%);
+}
+#quantity{
+    background-color: white;
+    color: black;
+    margin: 2px;
+    padding: 2px;
+    box-shadow: none;
+
+
+
+}
+
+
+
+#cartContents {
+    background-color: #c9aacb;
+    border-color: #8a508f;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 0;
+    width: 50%;
+    margin: auto;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    text-align: left;
+    justify-content: center;
+    border-radius: 10px;
+    line-height: 1.5;
+    padding: 10px;
+    box-shadow: 0 4px 2px 0 rgb(0 0 0 / 60%), 0 6px 20px 0 rgb(0 0 0 / 29%);
+
 }
 
 footer {
